Correct the alignment of the Items. #14

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 
 .filterInput {
   margin-bottom: 10px;
-  width: 165px;
+  width: 200px;
   height: 50px;
   font-size: 1.1em;
   border: 1px solid #808080;
